# cmon

./: .gitignore  .mypy.ini  .pylintrc  MANIFEST.in  README.org  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tasks.py
cmon/: __init__.py  context.py  dashboard.py  dashboards.py  errors.py  flock.py  htmldashboard.py  log.py  main.py  measurement.py  mount.py  printer.py  result.py  shell.py  storage.py  system.py  terminaldashboard.py  terminalprinter.py  testable.py  testsuite.py  utils.py
cmon/backend/: backend.py  backend_tests.py
cmon/chartbackend/: activity.py  chart_tests.py  chartbackend.py
cmon/database/: database.py  db_tests.py
cmon/dataflow/: dataflow.py  dataflow_tests.py
cmon/server/: df.py  server.py  server_tests.py
cmon/templates/: dashboard.html  result.html  source.html  style.css  sysdes.html  sysdes.puml  sysdessource.html
cmon/website/: web_tests.py  website.py
conf/: sample_config.py
doc/: config.rst
doc/source/: conf.py  config.rst  index.rst
docker/: Dockerfile
tests/: .env  compose.yaml  demo_config.py  docker-compose.yaml  start.sh  stop.sh  test_basic.py  test_conf.py
tests/conf/: demo.conf
tests/pgserver/: init.sql
tests/sshserver/: Dockerfile
tests/website/: index.html
